--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -10,7 +10,7 @@
 <body>
     <ul class="navigation">
         <li class="nav"><a href="../index.html">Головна</a></li>
-        <li class="nav"><a href="training.html">Тренування</a></li>
+        <li class="nav"><a href="training.html">Карти</a></li>
         <li class="nav"><a href="contacts.html">Контакти</a></li>
         <li class="nav"><a href="price.html">Ціни</a></li>
         <li class="nav" style="float:right"><a href="#">Напишіть нам</a></li>
