--- a/pages/price.html
+++ b/pages/price.html
@@ -10,14 +10,14 @@
 <body>
     <ul class="navigation">
         <li class="nav"><a href="../index.html">Головна</a></li>
-        <li class="nav"><a href="training.html">Тренування</a></li>
+        <li class="nav"><a href="training.html">Карти</a></li>
         <li class="nav"><a href="contacts.html">Контакти</a></li>
         <li class="nav"><a href="price.html">Ціни</a></li>
         <li class="nav" style="float:right"><a href="#">Напишіть нам</a></li>
     </ul>
 
 
-
+      <!--card #1-->
       <div class="card">
         <div class="card-list">
            <div class="card-image">
@@ -61,6 +61,49 @@
         </div>
      </div>
         
+
+     <!--card #2-->
+     <div class="card">
+      <div class="card-list">
+         <div class="card-image">
+           <img src="../images/calisthenics.webp" alt="Weight Lifting"/>
+         </div>
+         <div class="card-text"> 
+           <h4>Художня гімнастика</h4>
+           <p class="price">1200грн/місяць</p>
+           <a href="#join">
+             <button class="join_button">Приєднатися</button>
+           </a>
+
+         </div>
+      </div>
+      <div class="card-list">
+       <div class="card-image">
+         <img src="../images/Athletic.webp" alt="bodybuilding"/>
+       </div>
+       <div class="card-text"> 
+         <h4>Атлетика</h4>
+         <p class="price">600грн/місяць</p>
+         <a href="#join">
+           <button class="join_button">Приєднатися</button>
+         </a>
+       </div>
+
+      </div>
+      <div class="card-list"><div class="card-image">
+       <img src="../images/crossfit.jpg" alt="fitness"/>
+     </div>
+     <div class="card-text"> 
+       <h4>Кроссфіт</h4>
+       <p class="price">1600грн/місяць</p>
+       <a href="#join">
+         <button class="join_button">Приєднатися</button>
+       </a>
+
+     </div>
+
+       </div>
+      </div>
    </div>
 </body>
 </html>
