--- a/pages/training.html
+++ b/pages/training.html
@@ -11,23 +11,50 @@
     <!--navigation list-->
     <ul class="navigation">
         <li class="nav"><a href="../index.html">Головна</a></li>
-        <li class="nav"><a href="training.html">Тренування</a></li>
+        <li class="nav"><a href="training.html">Карти</a></li>
         <li class="nav"><a href="contacts.html">Контакти</a></li>
         <li class="nav"><a href="price.html">Ціни</a></li>
         <li class="nav" style="float:right"><a href="#">Напишіть нам</a></li>
       </ul>
-    <div class="girl">
+   
 
-    <h1 class="main_text" align="center">
-        Рухай своїм тілом,<br>
-        Формуйте своє майбутнє</h1>
-    </div>
+<!--cards-->
+<div class="wrapper">
+    <div class="cards_wrap">
+        <div class="card_item">
+             <div class="card_inner" align="center">
+                <div class="role_name" style="color: #e3bb66;">Карта Junior</div>
+                <div class="cost">1760 грн</div>
+                <div class="real_name">1,6-15 років</div>
+                <div class="film"><table>
+                    <tbody>
+                        <tr><td>Термін дії карти - </td><td>1 місяць</td></tr>
+                        <tr><td>Активація карти - </td><td>7 днів</td></tr>
+                        <tr><td>Призупинення контракту - </td><td>немає</td></tr>
+                        <tr><td>Супровід дитини - </td><td>до 3 чол</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div> 
 
-    <!--service text-->
-    <div class="service">
-        <h2 class="title">Послуги</h2>
-    </div>
-    
-
+    <div class="cards_wrap">
+        <div class="card_item">
+            <div class="card_inner" align="center">
+                <div class="role_name" style="color: #e3bb66;">Карта Junior</div>
+                <div class="cost">1760 грн</div>
+                <div class="real_name">1,6-15 років</div>
+                <div class="film"><table>
+                        <tbody>
+                            <tr><td>Термін дії карти - </td><td>1 місяць</td></tr>
+                            <tr><td>Активація карти - </td><td>7 днів</td></tr>
+                            <tr><td>Призупинення контракту - </td><td>немає</td></tr>
+                            <tr><td>Супровід дитини - </td><td>до 3 чол</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+</div>
 </body>
 </html>
