--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+<div class="body">
     <ul class="navigation">
         <li class="nav"><a href="index.html">Головна</a></li>
         <li class="nav"><a href="./pages/training.html">Карти</a></li>
@@ -39,8 +40,7 @@
     </div>
     </div>
 
-  </div>
-
+</div>
 <script src="js/main.js"></script>
 </body>
 </html>
