--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./css/main.css">
     
 </head>
-<body>
+<body scroll="no" style="overflow: hidden;">
 <div class="body">
     <ul class="navigation">
         <li class="nav"><a href="index.html">Головна</a></li>
-        <li class="nav"><a href="./pages/training.html">Карти</a></li>
-        <li class="nav"><a href="./pages/contacts.html">Контакти</a></li>
+        <li class="nav"><a href="./pages/training.html">Обладнання</a></li>
         <li class="nav"><a href="./pages/price.html">Ціни</a></li>
-        <li class="nav" style="float:right"><a href="#">Напишіть нам</a></li>
+        <li class="nav"><a href="./pages/contacts.html">Контакти</a></li>
+        <li class="nav" style="float:right"><a href="./pages/write.html">Напишіть нам</a></li>
       </ul>
     
 <h1 class="main">Вітання!</h1>
