--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -10,12 +10,21 @@
 <body>
     <ul class="navigation">
         <li class="nav"><a href="../index.html">Головна</a></li>
-        <li class="nav"><a href="training.html">Карти</a></li>
-        <li class="nav"><a href="contacts.html">Контакти</a></li>
+        <li class="nav"><a href="training.html">Обладнання</a></li>
         <li class="nav"><a href="price.html">Ціни</a></li>
-        <li class="nav" style="float:right"><a href="#">Напишіть нам</a></li>
+        <li class="nav"><a href="contacts.html">Контакти</a></li>
+        <li class="nav" style="float:right"><a href="write.html">Напишіть нам</a></li>
     </ul>
 
-    
+<div class="card">
+    <img src="../images/my_contact.jpg" alt="John" style="width:100%">
+    <h1>Білик Олександр</h1>
+    <p class="title">Номер телефону</p>
+    <a href="tel:+380977575711"><p>+380977575711</p></a>
+    <p><a href="write.html"><button>Написати</button></a></p>
+</div>
+
+      
+
 </body>
 </html>
