--- a/pages/price.html
+++ b/pages/price.html
@@ -10,11 +10,11 @@
 <body>
     <ul class="navigation">
         <li class="nav"><a href="../index.html">Головна</a></li>
-        <li class="nav"><a href="training.html">Карти</a></li>
-        <li class="nav"><a href="contacts.html">Контакти</a></li>
+        <li class="nav"><a href="training.html">Обладнання</a></li>
         <li class="nav"><a href="price.html">Ціни</a></li>
-        <li class="nav" style="float:right"><a href="#">Напишіть нам</a></li>
-    </ul>
+        <li class="nav"><a href="contacts.html">Контакти</a></li>
+        <li class="nav" style="float:right"><a href="write.html">Напишіть нам</a></li>
+      </ul>
 
 
       <!--card #1-->
@@ -26,7 +26,7 @@
            <div class="card-text"> 
              <h4>Важка атлетика</h4>
              <p class="price">800грн/місяць</p>
-             <a href="#join">
+             <a href="write.html">
                <button class="join_button">Приєднатися</button>
              </a>
 
@@ -39,7 +39,7 @@
          <div class="card-text"> 
            <h4>Бодібілдінг</h4>
            <p class="price">400грн/місяць</p>
-           <a href="#join">
+           <a href="write.html">
              <button class="join_button">Приєднатися</button>
            </a>
          </div>
@@ -51,7 +51,7 @@
        <div class="card-text"> 
          <h4>Фітнес</h4>
          <p class="price">1500грн/місяць</p>
-         <a href="#join">
+         <a href="write.html">
            <button class="join_button">Приєднатися</button>
          </a>
 
@@ -71,7 +71,7 @@
          <div class="card-text"> 
            <h4>Художня гімнастика</h4>
            <p class="price">1200грн/місяць</p>
-           <a href="#join">
+           <a href="write.html">
              <button class="join_button">Приєднатися</button>
            </a>
 
@@ -84,7 +84,7 @@
        <div class="card-text"> 
          <h4>Атлетика</h4>
          <p class="price">600грн/місяць</p>
-         <a href="#join">
+         <a href="write.html">
            <button class="join_button">Приєднатися</button>
          </a>
        </div>
@@ -96,7 +96,7 @@
      <div class="card-text"> 
        <h4>Кроссфіт</h4>
        <p class="price">1600грн/місяць</p>
-       <a href="#join">
+       <a href="write.html">
          <button class="join_button">Приєднатися</button>
        </a>
 
