--- a/pages/training.html
+++ b/pages/training.html
@@ -4,19 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тренування</title>
+    <title>Обладнання</title>
     <link rel="stylesheet" href="../css/training.css">
 </head>
 <body>
     <!--navigation list-->
     <ul class="navigation">
         <li class="nav"><a href="../index.html">Головна</a></li>
-        <li class="nav"><a href="training.html">Карти</a></li>
-        <li class="nav"><a href="contacts.html">Контакти</a></li>
+        <li class="nav"><a href="training.html">Обладнання</a></li>
         <li class="nav"><a href="price.html">Ціни</a></li>
-        <li class="nav" style="float:right"><a href="#">Напишіть нам</a></li>
+        <li class="nav"><a href="contacts.html">Контакти</a></li>
+        <li class="nav" style="float:right"><a href="write.html">Напишіть нам</a></li>
       </ul>
    
+
+
+      <h1 class="features-title">Тренуйся на кращих :)</h1>
+
+
+<ul class="features-list">
+    <li class="features-item">
+        <div class="featuresItem"><img src="../images/logos/lifefitness.webp" alt=""
+                class="featuresItem-icon" width="300" height="200">
+            <h3 class="featuresItem-title">Life Fitness</h3>
+            <div class="featuresItem-description">
+                <p>Life Fitness — беззмінний світовий лідер у виробництві спортивного обладнання для фітнес-клубів.</p>
+            </div>
+        </div>
+    </li>
+    <li class="features-item">
+        <div class="featuresItem"><img src="../images/logos/StarTrac.webp" alt=""
+                class="featuresItem-icon" width="300" height="200">
+            <h3 class="featuresItem-title">StarTrac</h3>
+            <div class="featuresItem-description">
+                <p>StarTrac уперше випустила електричну бігову доріжку в 1987 році, почала розвивати цей продукт і стала
+                    лідирувати в даній галузі.</p>
+            </div>
+        </div>
+    </li>
+    <li class="features-item">
+        <div class="featuresItem"><img src="../images/logos/Hammer_Strength.webp" alt=""
+                class="featuresItem-icon" width="300" height="200">
+            <h3 class="featuresItem-title">Hammer Strength</h3>
+            <div class="featuresItem-description">
+                <p>Hammer Strength — обладнання номер один серед тренажерів з вільними вагами. Унікальні тренажери, які
+                    використовують одну з найефективніших технологій силових тренувань.</p>
+            </div>
+        </div>
+    </li>
+    <li class="features-item">
+        <div class="featuresItem"><img src="../images/logos/Precor.webp" alt=""
+                class="featuresItem-icon" width="300" height="200">
+            <h3 class="featuresItem-title">Precor</h3>
+            <div class="featuresItem-description">
+                <p>Компанія PRECOR завоювала репутацію виробника винятково надійних професійних кардіотренажерів.</p>
+            </div>
+        </div>
+    </li>
+    <li class="features-item">
+        <div class="featuresItem"><img src="../images/logos/Technogym.webp" alt=""
+                class="featuresItem-icon" width="300" height="200">
+            <h3 class="featuresItem-title">Technogym</h3>
+            <div class="featuresItem-description">
+                <p>Обладнання Technogym спроєктоване та виготовлене в Італії. Перевірена якість та міцність усіх моделей
+                    обладнання роблять Technogym вибором «номер один» для спортивних професійних центрів у всьому світі.
+                </p>
+            </div>
+        </div>
+    </li>
+    <li class="features-item">
+        <div class="featuresItem"><img src="../images/logos/Cybex.webp" alt=""
+                class="featuresItem-icon" width="300" height="200">
+            <h3 class="featuresItem-title">Cybex</h3>
+            <div class="featuresItem-description">
+                <p>Американська компанія Cybex — провідний виробник преміального обладнання для фітнес-клубів. В основі
+                    діяльності — науковий підхід до тренувань.</p>
+            </div>
+        </div>
+    </li>
+</ul>
+
+
 
 </body>
 </html>
